<resources>
    <string name="app_name">Rock_Paper_Scissor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings1">Settings</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="product_list">Product List</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="name">Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="view">View</string>
    <string name="action">Action</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="remove">Remove</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="shop">Shop</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="button1_text">
        <font size="16"><font_bold>Your Freebie-Mon to wed ONLY</font_bold></font>\n<font size="14">\nchoose from Manicure to Massage to Waxing on min.Booking of 999.Book Now-Check PriceList> Services.Offer Valid on Mon-Wed and not on packages</font></string>

    <string name="button2_text">
        <font size="16"><font_bold>Any four services in Rs. 999</font_bold></font>\n<font size="14">\nchoose four services from our Weekday special Package just in Rs. 999 .Choose from different Clean Ups,Manicure,Massages,Waxing,Threading.Book now.
    </font>
</string>
    <string name="button3_text">
        <font size="16"><fond_bold> Luxury Package: FLAT Rs.700 OFF</fond_bold></font>\n<font size="14">\n Get FLAT Rs. 700 Off on Luxury Packages.Only Premium Brands Used.From O3 Facial to Rica Wax.</font></string>

    <string name="button4_text">
    <font size="16"><font_bold>Perfect for Your Budget: Facials under 999</font_bold></font>\n<font size="14">\nChoose from Kiwi Kool Fruit Facial(Estrella Professionals) to Pearl Facial(Blossom Kochhar) and Many More under Rs. 999. Book your slot now </font></string>

    <string name="button5_text">
        <font size="16"><font_bold>Gift YourSelf.FLAT 150 OFF Gift Voucher</font_bold></font>\n<font size="14">\nGrab Rs. 150 OFF GIFT Voucher from health and glow on any beauty services worth Rs. 999 and more.Last few Gift Vouchers ONLY.Grab your now. </font></string>

    <string name="button6_text">
            <font size="16"><font_bold>Your Favourite at upto 50% OFF </font_bold></font>\n<font size="14">\nUpto 800 OFF on Moroccan Argon Hair Spa.COMBO:WHitening pedicure and Manicure FLAT Rs. 200 OFF.For more Discounts Check Offer Zone under service.Hurry</font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
