<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/purple_dark"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn1"
                android:text="@string/button1_text"
                android:textAllCaps="false"
                android:gravity="center"


                />

            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn2"
                android:text="@string/button2_text"
                android:textAllCaps="false"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/btn1"
                android:layout_alignParentStart="true"
                android:textSize="14sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button3_text"
                android:layout_below="@+id/btn2"
                android:layout_marginTop="3dp"
                android:textAlignment="gravity"
                android:id="@+id/btn3"
                android:layout_alignParentStart="true"
                android:textAllCaps="false"    />

            <Button
                android:layout_width="match_parent"
                android:textAlignment="gravity"
                android:text="@string/button4_text"
                android:layout_height="wrap_content"
                android:id="@+id/btn4"
                android:layout_marginTop="3dp"
                android:textAllCaps="false"
                android:layout_below="@+id/btn3"
                android:layout_alignParentStart="true"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button5_text"
                android:id="@+id/btn5"
                android:textAlignment="gravity"
                android:layout_marginTop="3dp"
                android:textAllCaps="false"
                android:layout_below="@+id/btn4"
                android:layout_alignParentStart="true"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button6_text"
                android:id="@+id/btn6"
                android:textAlignment="gravity"
                android:layout_marginTop="3dp"
                android:textAllCaps="false"
                android:layout_below="@+id/btn5"
                android:layout_alignParentStart="true"
                />



        </LinearLayout>
    </ScrollView>

</LinearLayout>